--- a/angular.json
+++ b/angular.json
@@ -28,14 +28,15 @@
               }
             ],
             "styles": ["src/styles.scss"],
-            "scripts": ["bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": ["bootstrap/dist/js/bootstrap.min.js"],
+            "outputPath": "dist/portfolio-angular-2025"
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
+                  "maximumWarning": "600kB",
                   "maximumError": "1MB"
                 },
                 {
@@ -65,6 +66,15 @@
             }
           },
           "defaultConfiguration": "development"
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://iagodizlla.github.io/portfolio-angular/",
+            "repo": "https://github.com/iagodizlla/portfolio-angular",
+            "name": "Iago Henrique Schlemper",
+            "email": "iagoschlemper@gmail.com"
+          }
         },
         "extract-i18n": {
           "builder": "@angular/build:extract-i18n"
